--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-
 @import "tailwindcss";
 
 * {
@@ -22,7 +21,8 @@ li {
 }
 
 body {
-  color: #fff;
+  color: inherit;
+  font-family: "outfit", sans-serif;
 }
 
 button {
