--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 li {
-  color: #fff;
+  color: inherit;
 }
 
 body {
@@ -44,6 +44,7 @@ button {
   justify-content: space-between;
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 14px;
   transition: all 0.5s linear;
 }
 
